2009-02-18  John W. Eaton  <jwe@octave.org>

	* mex.cc (call_mex): Declare local nargout variable volatile to
	avoid "maybe clobbered by vfork" warning from GCC.

	* ov-cx-mat.cc (xabs): Comment out unused static function.
	* ov-flt-cx-mat.cc (xabs): Ditto.

	* c-file-ptr-stream.cc (c_file_ptr_buf::seekoff,
	c_file_ptr_buf::seepos, c_zfile_ptr_buf::seekoff,
	c_zfile_ptr_buf::seepos): Avoid unused paramter warnings.

2009-02-18  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fresize): Allow arbitrary number of parameters. Improve
	documentation.

2009-02-17  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* file-io.cc: (Fmkstemp): Use mkstemps if it is available and
	mkstemp is missing.

2009-02-17  Olaf Till  <olaf.till@uni-jena.de>

	* DLD-FUNCTIONS/lsode.cc, DLD-FUNCTIONS/daspk.cc, 
	DLD-FUNCTIONS/dassl.cc, DLD-FUNCTIONS/dasrt.cc: Documentation fixes.

2009-02-17  Kai Habel  <kai.habel@gmx.de>

	* DLD-FUNCTIONS/convhulln.cc (Fconvhulln): Compute convex hull
	volume and return it as second output.  New tests.

2009-02-17  John W. Eaton  <jwe@octave.org>

	* ov-fcn.h (octave_function::octave_function): Initialize data members.
	(octave_function::dispatch_class): No longer virtual.
	Replace with version from ov-usr-fcn.h.
	(octave_function::xdispatch_class,
	octave_function::stash_dispatch_class): Move here from ov-usr-fcn.h.
	(octave_function::mark_as_private_function,
	octave_function::is_private_function,
	octave_function::is_private_function_of_class): New functions.
	(octave_function::private_function): New data member.
	* ov-usr-fcn.h (octave_user_function::xdispatch_class,
	octave_user_function::stash_dispatch_class,
	octave_user_function::dispatch_class): Delete.
	* ov-usr-fcn.cc (octave_user_function::octave_user_function):
	Don't initialize xdispatch_type.

	* symtab.cc
	(symbol_table::fcn_info::fcn_info_rep::load_private_function):
	If private directory is subdirectory of class directory, qmark
	function as a private directory of the class.
